made design 1 and started 2

--- a/design1/index.html
+++ b/design1/index.html
@@ -2,17 +2,21 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Page Title</title>
+    <title>Jaimelesjeux</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
+    <link rel="icon" href="favicon.ico" />
+    <script src="js/main.js"></script>
 </head>
 <body class="grid">
     <header>
         <h1>Jaimelesjeux.fr</h1>
+        <p>Parce que jouer c'est bien, mais créer c'est mieux !</p>
     </header>
     <nav>
         <div class="navbar">
-            <ul>
+            <button class="navbar-swap" type="button">&#9776;</button>
+            <ul class="navbar-list">
                 <li><a href="">Home</a></li>
                 <li><a href="">Company</a></li>
                 <li><a href="">Products</a></li>
