--- a/design2/index.html
+++ b/design2/index.html
@@ -18,14 +18,14 @@
             <div class="navbar">
                 <button class="navbar-swap" type="button">&#9776;</button>
                 <ul class="navbar-list">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Company</a></li>
-                    <li><a href="">Products</a></li>
+                    <li><a href="">Accueil</a></li>
+                    <li><a href="">Entreprise</a></li>
+                    <li><a href="">Produits</a></li>
                     <li><a href="">Blog</a></li>
                     <li>
                         <select name="" id="">
+                            <option value="">Français</option>
                             <option value="">English</option>
-                            <option value="">French</option>
                         </select>
                     </li>
                 </ul>
