--- a/design2/index.html
+++ b/design2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Jaimelesjeux</title>
+    <title>🎲Jaimelesjeux</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
     <link rel="icon" href="favicon.ico" />
@@ -10,8 +10,10 @@
 </head>
 <body class="grid">
     <header>
-        <h1>Jaimelesjeux.fr</h1>
-        <p>Parce que jouer c'est bien, mais créer c'est mieux !</p>
+        <div class="title">
+            <h1>Jaimelesjeux.fr</h1>
+            <p>Parce que jouer c'est bien, mais créer c'est mieux !</p>
+        </div>
     </header>
     <aside>
         <nav>
@@ -33,27 +35,36 @@
         </nav>
     </aside>
     <main>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In auctor, purus a vehicula viverra, nunc ligula viverra odio, non porta felis mauris sit amet odio. Donec sagittis lobortis nibh, non venenatis mi tincidunt ac. Vestibulum sem ipsum, egestas interdum cursus non, ultrices id ante. Vivamus bibendum, arcu ac dignissim dapibus, elit risus ornare libero, sed ultricies ex est vel purus. Cras at enim ac elit lobortis tempor eu rutrum neque. Mauris tempor mattis malesuada. Donec pulvinar, arcu eu lacinia rhoncus, lectus felis faucibus justo, sit amet pharetra enim risus sit amet urna. Morbi malesuada fermentum enim in luctus. Aenean pulvinar tempus nisi, vulputate sagittis neque.
-
-            Suspendisse interdum nunc laoreet diam mollis sagittis. Donec ultricies nibh sed purus fermentum accumsan. Nam auctor velit leo, vestibulum tincidunt mauris viverra in. Quisque tincidunt nec turpis sed commodo. Vestibulum eleifend venenatis metus, nec mattis risus bibendum ac. In vestibulum rhoncus velit vel bibendum. Nam id hendrerit augue. In ullamcorper nisl tortor, ut vulputate nunc dapibus ac. Aliquam erat volutpat. Praesent ut imperdiet tellus. Vivamus tortor erat, consequat gravida leo a, feugiat tincidunt metus. Integer sollicitudin turpis ipsum, in dapibus lacus tristique a. Integer id dui malesuada sem blandit pretium non sed nisi. Sed elementum id nibh eu ornare.
-
-            Duis feugiat aliquet est, et ullamcorper nisl fermentum ac. Maecenas sollicitudin ex vel nisl commodo posuere. In hac habitasse platea dictumst. Ut a risus orci. Nunc elit tellus, hendrerit vel suscipit id, ultrices vel eros. Aliquam id faucibus ante, nec luctus erat. Maecenas faucibus id augue luctus faucibus. Fusce nisl eros, viverra non leo quis, hendrerit ullamcorper enim. Nullam id ipsum nibh. In venenatis felis et eleifend vehicula. Mauris ut eleifend dolor. Vivamus ultrices ex non aliquet pulvinar. Suspendisse cursus malesuada diam eget faucibus. Mauris cursus risus sit amet dui varius, nec scelerisque nisi porta.
-
-            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Mauris suscipit nunc id pellentesque varius. Suspendisse justo nisi, ornare ac aliquet sit amet, mollis ac erat. Nulla et ullamcorper ligula. Morbi posuere, orci ac congue convallis, nulla ligula porttitor felis, nec malesuada enim ligula interdum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam erat volutpat. Donec nec vestibulum metus. Nulla fermentum ultrices ex, eu maximus orci maximus in. Nunc nec congue neque, in cursus dolor.
-
-            Nulla consectetur turpis libero, ut consectetur nibh tristique in. Ut scelerisque sagittis augue, in dictum magna convallis a. Fusce pharetra dolor quis ligula venenatis tristique. Pellentesque in eleifend orci, at interdum ipsum. Quisque et accumsan mauris. Fusce tempus risus quis magna aliquam egestas. Phasellus et quam sit amet diam malesuada tempor sit amet vel urna. Aenean non nisi sed ante sollicitudin vehicula at at tortor. Sed mattis tellus et justo scelerisque ullamcorper tristique dapibus justo. Phasellus risus risus, convallis lobortis quam gravida, efficitur ultrices enim. Nunc commodo magna in erat sollicitudin, id efficitur ipsum vestibulum. Donec ultrices diam in ipsum maximus, id convallis urna posuere. Sed dignissim orci quis pulvinar porttitor.
-
-            Pellentesque sapien justo, faucibus at ex at, feugiat auctor quam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae auctor sapien. Maecenas commodo scelerisque maximus. Suspendisse posuere dignissim rhoncus. Sed non quam lobortis quam lacinia ultricies. Maecenas tempus, nibh at venenatis convallis, eros augue tristique lorem, quis facilisis dolor nunc sodales mi. Phasellus sit amet sapien leo. Morbi eleifend arcu quis tortor tempus feugiat. Curabitur mattis, orci sit amet sagittis interdum, turpis arcu consequat dolor, ut fermentum lorem dolor id purus.
-
-            Cras semper, arcu auctor mattis dignissim, felis dui mattis augue, sit amet sollicitudin dolor risus in nulla. Nulla ut finibus dui. Cras at dignissim sapien, nec dignissim justo. Duis vel malesuada enim, at blandit risus. Vivamus ac imperdiet dolor. Proin sit amet mattis mauris, a lobortis est. Praesent eu convallis odio. Nam sit amet leo nunc. Nullam eu interdum dolor, sit amet elementum tellus.
-
-            Mauris pulvinar in nisl ac vulputate. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id dui auctor, eleifend dolor id, rutrum ante. Aliquam fringilla sollicitudin lacus et commodo. Mauris vitae condimentum ligula. Proin vitae neque vel orci venenatis pulvinar. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam vitae nibh sagittis, convallis libero ac, rutrum quam. Nulla consequat volutpat ligula, quis sodales libero. Phasellus sit amet dapibus eros, ac condimentum neque. Curabitur in erat tristique, pulvinar justo sit amet, semper eros. Maecenas quis dignissim elit. Fusce eu quam vehicula mauris auctor convallis sed quis metus. Vestibulum nulla augue, faucibus non finibus et, viverra vitae dui. Nulla dapibus ipsum quis tortor feugiat, at dignissim arcu fermentum.
-
-            Integer faucibus neque nisl, non ultricies ex porttitor eget. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam dapibus mauris a tellus placerat finibus. Suspendisse et nisi in augue mollis lacinia. Morbi pharetra mauris quis enim pretium, nec scelerisque enim maximus. Proin tincidunt est non velit efficitur cursus eu ut nisl. Integer sed tincidunt erat, nec sagittis ex.
-
-            Donec lobortis, turpis et mattis pulvinar, arcu tellus ullamcorper neque, interdum porta sem turpis sed mauris. Duis non sapien dolor. Pellentesque tincidunt nulla nulla, non commodo justo congue malesuada. Proin at blandit lacus. Etiam ligula libero, varius eget massa non, cursus feugiat ipsum. Etiam gravida maximus hendrerit. Sed rhoncus, nibh in imperdiet pharetra, tortor nulla malesuada enim, et dignissim lectus quam ut eros. Curabitur et tellus efficitur, consectetur orci sit amet, scelerisque sapien. Curabitur condimentum felis sit amet enim feugiat tincidunt.
-        </p>
+        <section class="article-container article-left">
+            <article class="article-prev">
+                <div>
+                    <h1>Mon premier article</h1>
+                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
+                    <a href="#">Lire la suite</a>
+                </div>
+                <!-- <img src="images/rose2.png" alt="" class="article-image"> -->
+            </article>
+        </section>
+        <section class="article-container article-middle">
+            <article class="article-prev">
+                <div>
+                    <h1>Mon second article article</h1>
+                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
+                    <a href="#">Lire la suite</a>
+                </div>
+                <!-- <img src="images/rose2.png" alt="" class="article-image"> -->
+            </article>
+        </section>
+        <section class="article-container article-right">
+            <article class="article-prev">
+                <div>
+                    <h1>Mon deuxieme article</h1>
+                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
+                    <a href="#">Lire la suite</a>
+                </div>
+                <!-- <img src="images/rose2.png" alt="" class="article-image"> -->
+            </article>
+        </section>
     </main>
     <footer>
         <p>&copy;Jaimelesjeux.fr</p>
