changed article management

--- a/design2/index.html
+++ b/design2/index.html
@@ -35,8 +35,8 @@
         </nav>
     </aside>
     <main>
-        <section class="article-container article-left">
-            <article class="article-prev">
+        <section class="article-container">
+            <article class="article-prev article-left">
                 <div>
                     <h1>Mon premier article</h1>
                     <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
@@ -44,9 +44,7 @@
                 </div>
                 <!-- <img src="images/rose2.png" alt="" class="article-image"> -->
             </article>
-        </section>
-        <section class="article-container article-middle">
-            <article class="article-prev">
+            <article class="article-prev article-middle">
                 <div>
                     <h1>Mon second article article</h1>
                     <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
@@ -54,9 +52,7 @@
                 </div>
                 <!-- <img src="images/rose2.png" alt="" class="article-image"> -->
             </article>
-        </section>
-        <section class="article-container article-right">
-            <article class="article-prev">
+            <article class="article-prev article-right">
                 <div>
                     <h1>Mon deuxieme article</h1>
                     <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
