--- a/www/index.html
+++ b/www/index.html
@@ -37,25 +37,19 @@
     <main>
         <section class="article-container">
             <article class="article-prev article-left">
-                <div>
-                    <h1>Mon premier article</h1>
-                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
-                    <a href="#">Lire la suite</a>
-                </div>
+                <h1>Mon premier article</h1>
+                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
+                <a class="article-link" href="#">Lire la suite</a>
             </article>
             <article class="article-prev article-middle">
-                <div>
-                    <h1>Mon second article article</h1>
-                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
-                    <a href="#">Lire la suite</a>
-                </div>
+                <h1>Mon second article article</h1>
+                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
+                <a class="article-link" href="#">Lire la suite</a>
             </article>
             <article class="article-prev article-right">
-                <div>
-                    <h1>Mon deuxieme article</h1>
-                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
-                    <a href="#">Lire la suite</a>
-                </div>
+                <h1>Mon deuxieme article</h1>
+                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
+                <a class="article-link" href="#">Lire la suite</a>
             </article>
         </section>
     </main>
