--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>🎲Jaimelesjeux</title>
@@ -8,6 +9,7 @@
     <link rel="icon" href="favicon.ico">
     <script src="js/main.js"></script>
 </head>
+
 <body class="grid">
     <header>
         <div class="title">
@@ -15,40 +17,44 @@
             <p>Parce que jouer c'est bien, mais créer c'est mieux !</p>
         </div>
     </header>
-    <aside>
-        <nav>
-            <div class="navbar">
-                <button class="navbar-swap" type="button">&#9776;</button>
-                <ul class="navbar-list">
-                    <li><a href="">Accueil</a></li>
-                    <li><a href="">Entreprise</a></li>
-                    <li><a href="">Produits</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li>
-                        <select name="" id="">
+    <nav>
+        <div class="navbar">
+            <button class="navbar-swap" type="button">&#9776;</button>
+            <ul class="navbar-list">
+                <li><a href="">Accueil</a></li>
+                <li><a href="">Entreprise</a></li>
+                <li><a href="">Produits</a></li>
+                <li><a href="">Blog</a></li>
+                <li>
+                    <select name="" id="">
                             <option value="">Français</option>
                             <option value="">English</option>
                         </select>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </aside>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <main>
+        <aside>
+
+        </aside>
         <section class="article-container">
             <article class="article-prev article-left">
                 <h1>Mon premier article</h1>
-                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
+                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
+                    putamus...</p>
                 <a class="article-link" href="#">Lire la suite</a>
             </article>
             <article class="article-prev article-middle">
                 <h1>Mon second article article</h1>
-                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
+                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
+                    putamus...</p>
                 <a class="article-link" href="#">Lire la suite</a>
             </article>
             <article class="article-prev article-right">
                 <h1>Mon deuxieme article</h1>
-                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...</p>
+                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
+                    putamus...</p>
                 <a class="article-link" href="#">Lire la suite</a>
             </article>
         </section>
@@ -57,4 +63,5 @@
         <p>&copy;Jaimelesjeux.fr</p>
     </footer>
 </body>
+
 </html>
