background and tweaks

--- a/www/index.html
+++ b/www/index.html
@@ -21,15 +21,15 @@
         <div class="navbar">
             <button class="navbar-swap" type="button">&#9776;</button>
             <ul class="navbar-list">
-                <li><a href="">Accueil</a></li>
-                <li><a href="">Entreprise</a></li>
-                <li><a href="">Produits</a></li>
-                <li><a href="">Blog</a></li>
-                <li>
+                <li class="navbar-item"><a href="">Accueil</a></li>
+                <li class="navbar-item"><a href="">Entreprise</a></li>
+                <li class="navbar-item"><a href="">Produits</a></li>
+                <li class="navbar-item navbar-item-selected"><a href="">Blog</a></li>
+                <li class="navbar-item">
                     <select name="" id="">
-                            <option value="">Français</option>
-                            <option value="">English</option>
-                        </select>
+                        <option value="">Français</option>
+                        <option value="">English</option>
+                    </select>
                 </li>
             </ul>
         </div>
@@ -42,19 +42,22 @@
             <article class="article-prev article-left">
                 <h1>Mon premier article</h1>
                 <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
-                    putamus...</p>
+                    putamus...
+                </p>
                 <a class="article-link" href="#">Lire la suite</a>
             </article>
             <article class="article-prev article-middle">
                 <h1>Mon second article article</h1>
                 <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
-                    putamus...</p>
+                    putamus...
+                </p>
                 <a class="article-link" href="#">Lire la suite</a>
             </article>
             <article class="article-prev article-right">
                 <h1>Mon deuxieme article</h1>
                 <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
-                    putamus...</p>
+                    putamus...
+                </p>
                 <a class="article-link" href="#">Lire la suite</a>
             </article>
         </section>
