--- a/www/index.html
+++ b/www/index.html
@@ -10,61 +10,57 @@
     <script src="js/main.js"></script>
 </head>
 
-<body class="grid">
-    <header>
-        <div class="title">
-            <h1>Jaimelesjeux.fr</h1>
-            <p>Parce que jouer c'est bien, mais créer c'est mieux !</p>
-        </div>
-    </header>
-    <nav>
-        <div class="navbar">
-            <button class="navbar-swap" type="button">&#9776;</button>
-            <ul class="navbar-list">
-                <li class="navbar-item"><a href="">Accueil</a></li>
-                <li class="navbar-item"><a href="">Entreprise</a></li>
-                <li class="navbar-item"><a href="">Produits</a></li>
-                <li class="navbar-item navbar-item-selected"><a href="">Blog</a></li>
-                <li class="navbar-item">
-                    <select name="" id="">
-                        <option value="">Français</option>
-                        <option value="">English</option>
-                    </select>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <main>
-        <aside>
+<body class="global">
+    <div class="grid">
+        <header>
+            <div class="title">
+                <h1>Jaimelesjeux.fr</h1>
+                <p>Parce que jouer c'est bien, mais créer c'est mieux !</p>
+            </div>
+        </header>
+        <nav>
+            <div class="navbar">
+                <button class="navbar-swap" type="button">&#9776;</button>
+                <ul class="navbar-list">
+                    <li class="navbar-item"><a href="">Accueil</a></li>
+                    <li class="navbar-item"><a href="">Entreprise</a></li>
+                    <li class="navbar-item"><a href="">Produits</a></li>
+                    <li class="navbar-item navbar-item-selected"><a href="">Blog</a></li>
+                </ul>
+            </div>
+        </nav>
+        <main>
+            <aside>
 
-        </aside>
-        <section class="article-container">
-            <article class="article-prev article-left">
-                <h1>Mon premier article</h1>
-                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
-                    putamus...
-                </p>
-                <a class="article-link" href="#">Lire la suite</a>
-            </article>
-            <article class="article-prev article-middle">
-                <h1>Mon second article article</h1>
-                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
-                    putamus...
-                </p>
-                <a class="article-link" href="#">Lire la suite</a>
-            </article>
-            <article class="article-prev article-right">
-                <h1>Mon deuxieme article</h1>
-                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
-                    putamus...
-                </p>
-                <a class="article-link" href="#">Lire la suite</a>
-            </article>
-        </section>
-    </main>
-    <footer>
-        <p>&copy;Jaimelesjeux.fr</p>
-    </footer>
+            </aside>
+            <section class="article-container">
+                <article class="article-prev article-left">
+                    <h1>Mon premier article</h1>
+                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
+                        putamus...
+                    </p>
+                    <a class="article-link" href="#">Lire la suite</a>
+                </article>
+                <article class="article-prev article-middle">
+                    <h1>Mon second article article</h1>
+                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
+                        putamus...
+                    </p>
+                    <a class="article-link" href="#">Lire la suite</a>
+                </article>
+                <article class="article-prev article-right">
+                    <h1>Mon deuxieme article</h1>
+                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
+                        putamus...
+                    </p>
+                    <a class="article-link" href="#">Lire la suite</a>
+                </article>
+            </section>
+        </main>
+        <footer>
+            <p>&copy;Jaimelesjeux.fr</p>
+        </footer>
+    </div>
 </body>
 
 </html>
