remove raduis and add icons

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>🎲Jaimelesjeux</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha256-NuCn4IvuZXdBaFKJOAcsU2Q3ZpwbdFisd5dux4jkQ5w=" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
     <link rel="icon" href="favicon.ico">
     <script src="js/main.js"></script>
@@ -22,10 +23,10 @@
             <div class="navbar">
                 <button class="navbar-swap" type="button">&#9776;</button>
                 <ul class="navbar-list">
-                    <li class="navbar-item"><a href="">Accueil</a></li>
-                    <li class="navbar-item"><a href="">Entreprise</a></li>
-                    <li class="navbar-item"><a href="">Produits</a></li>
-                    <li class="navbar-item navbar-item-selected"><a href="">Blog</a></li>
+                    <li class="navbar-item"><a href=""><i class="fa fa-home"></i> Accueil</a></li>
+                    <li class="navbar-item"><a href=""><i class="fa fa-industry"></i> Entreprise</a></li>
+                    <li class="navbar-item"><a href=""><i class="fa fa-archive"></i> Produits</a></li>
+                    <li class="navbar-item navbar-item-selected"><a href=""><i class="fa fa-book"></i> Blog</a></li>
                 </ul>
             </div>
         </nav>
