--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,7 @@
             </section>
         </main>
         <footer>
-            <p>&copy;Jaimelesjeux.fr</p>
+            <p><i class="fa fa-copyright"></i> Jaimelesjeux.fr</p>
         </footer>
     </div>
 </body>
