--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
         <header>
             <div class="title">
                 <h1>Jaimelesjeux.fr</h1>
-                <p>Mon stie de jeux vidéo et jeux de société <br> Parce que jouer c'est bien, mais créer c'est mieux !</p>
+                <p>Mon site de jeux vidéo et jeux de société <br> Parce que jouer c'est bien, mais créer c'est mieux !</p>
             </div>
         </header>
         <nav>
