finished layout and started single article

--- a/www/index.html
+++ b/www/index.html
@@ -23,10 +23,10 @@
             <div class="navbar">
                 <button class="navbar-swap" type="button">&#9776;</button>
                 <ul class="navbar-list">
-                    <li class="navbar-item"><a href=""><i class="fa fa-home"></i> Accueil</a></li>
-                    <li class="navbar-item"><a href=""><i class="fa fa-industry"></i> Entreprise</a></li>
-                    <li class="navbar-item"><a href=""><i class="fa fa-archive"></i> Produits</a></li>
-                    <li class="navbar-item navbar-item-selected"><a href=""><i class="fa fa-book"></i> Blog</a></li>
+                    <li class="navbar-item"><a href="."><i class="fa fa-home"></i> Accueil</a></li>
+                    <li class="navbar-item"><a href="company.html"><i class="fa fa-industry"></i> Entreprise</a></li>
+                    <li class="navbar-item"><a href="products.html"><i class="fa fa-archive"></i> Produits</a></li>
+                    <li class="navbar-item navbar-item-selected"><a href="blog.html"><i class="fa fa-book"></i> Blog</a></li>
                 </ul>
             </div>
         </nav>
@@ -40,21 +40,35 @@
                     <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
                         putamus...
                     </p>
-                    <a class="article-link" href="#">Lire la suite</a>
+                    <a class="article-link" href="article.html">Lire la suite</a>
                 </article>
                 <article class="article-prev article-middle">
                     <h1>Mon second article article</h1>
                     <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
                         putamus...
                     </p>
-                    <a class="article-link" href="#">Lire la suite</a>
+                    <a class="article-link" href="article.html">Lire la suite</a>
                 </article>
                 <article class="article-prev article-right">
                     <h1>Mon deuxieme article</h1>
                     <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
                         putamus...
                     </p>
-                    <a class="article-link" href="#">Lire la suite</a>
+                    <a class="article-link" href="article.html">Lire la suite</a>
+                </article>
+                <article class="article-prev article-middle">
+                    <h1>Mon second article article</h1>
+                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
+                        putamus...
+                    </p>
+                    <a class="article-link" href="article.html">Lire la suite</a>
+                </article>
+                <article class="article-prev article-left">
+                    <h1>Mon premier article</h1>
+                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
+                        putamus...
+                    </p>
+                    <a class="article-link" href="article.html">Lire la suite</a>
                 </article>
             </section>
         </main>
