--- a/www/article.html
+++ b/www/article.html
@@ -31,15 +31,45 @@
             </div>
         </nav>
         <main>
-            <aside>
-
-            </aside>
-            <article class="article-base">
-                <h1>Mon premier article</h1>
-                <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
-                    putamus...
-                </p>
-            </article>
+            <div class="article-page">
+                <aside>
+                    <div class="bookmark">
+                        <ul>
+                            <li><a href="#title">Titre</a></li>
+                            <li><a href="#first">Partie une</a></li>
+                            <li><a href="#second">Partie deux</a></li>
+                            <li><a href="#third">Partie trois</a></li>
+                        </ul>
+                    </div>
+                </aside>
+                <article class="article-base">
+                    <h1 id="title">Mon premier article</h1>
+                    <h2 id="first">Ma première partie</h2>
+                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
+                        putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore
+                        inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius
+                        fructus in ipso amore inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti
+                        sed quod omnis eius fructus in ipso amore inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non
+                        spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...
+                    </p>
+                    <h2 id="second">Ma seconde partie</h2>
+                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
+                        putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore
+                        inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius
+                        fructus in ipso amore inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti
+                        sed quod omnis eius fructus in ipso amore inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non
+                        spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...
+                    </p>
+                    <h2 id="third">Ma troisième partie</h2>
+                    <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
+                        putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore
+                        inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius
+                        fructus in ipso amore inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti
+                        sed quod omnis eius fructus in ipso amore inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non
+                        spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...
+                    </p>
+                </article>
+            </div>
         </main>
         <footer>
             <p><i class="fa fa-copyright"></i> Jaimelesjeux.fr</p>
