--- a/www/article.html
+++ b/www/article.html
@@ -32,7 +32,7 @@
         </nav>
         <main>
             <div class="article-page">
-                <aside>
+                <aside class="bookmark-container">
                     <div class="bookmark">
                         <ul>
                             <li><a href="#title">Titre</a></li>
@@ -43,8 +43,8 @@
                     </div>
                 </aside>
                 <article class="article-base">
-                    <h1 id="title">Mon premier article</h1>
-                    <h2 id="first">Ma première partie</h2>
+                    <h1 id="title" class="anchor">Mon premier article</h1>
+                    <h2 id="first" class="anchor">Ma première partie</h2>
                     <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
                         putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore
                         inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius
@@ -52,7 +52,7 @@
                         sed quod omnis eius fructus in ipso amore inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non
                         spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...
                     </p>
-                    <h2 id="second">Ma seconde partie</h2>
+                    <h2 id="second" class="anchor">Ma seconde partie</h2>
                     <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
                         putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore
                         inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius
@@ -60,7 +60,7 @@
                         sed quod omnis eius fructus in ipso amore inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non
                         spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam putamus...
                     </p>
-                    <h2 id="third">Ma troisième partie</h2>
+                    <h2 id="third" class="anchor">Ma troisième partie</h2>
                     <p>Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore inest, expetendam
                         putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius fructus in ipso amore
                         inest, expetendam putamus...Ut enim benefici liberalesque sumus, non ut exigamus gratiam (neque enim beneficium faeneramur sed natura propensi ad liberalitatem sumus), sic amicitiam non spe mercedis adducti sed quod omnis eius
