--- a/www/index.html
+++ b/www/index.html
@@ -23,10 +23,10 @@
             <div class="navbar">
                 <button class="navbar-swap" type="button">&#9776;</button>
                 <ul class="navbar-list">
-                    <li class="navbar-item"><a href="."><i class="fa fa-home"></i> Accueil</a></li>
+                    <li class="navbar-item navbar-item-selected"><a href="."><i class="fa fa-home"></i> Accueil</a></li>
                     <li class="navbar-item"><a href="company.html"><i class="fa fa-industry"></i> Entreprise</a></li>
                     <li class="navbar-item"><a href="products.html"><i class="fa fa-archive"></i> Produits</a></li>
-                    <li class="navbar-item navbar-item-selected"><a href="blog.html"><i class="fa fa-book"></i> Blog</a></li>
+                    <li class="navbar-item"><a href="blog.html"><i class="fa fa-book"></i> Blog</a></li>
                 </ul>
             </div>
         </nav>
